force-app/main/default/objects/OLF_Callout_Setting__mdt/OLF_Callout_Setting__mdt.object-meta.xml
<CustomObject>
    <label>OLF Callout Setting</label>
    <pluralLabel>OLF Callout Settings</pluralLabel>
</CustomObject>