force-app/main/default/objects/OLF_Callout_Setting__mdt/fields/Authorization_URL__c.field-meta.xml
<CustomField>
    <fullName>Authorization_URL__c</fullName>
    <inlineHelpText>Enter URL/Named Credential of authorization end-point.</inlineHelpText>
    <label>Authorization URL</label>
    <type>TextArea</type>
</CustomField>