force-app/main/default/objects/OLF_Callout_Setting__mdt/fields/Enable_Rerty__c.field-meta.xml
<CustomField>
    <fullName>Enable_Rerty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Rerty</label>
    <type>Checkbox</type>
</CustomField>