force-app/main/default/objects/OLF_Callout_Setting__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <inlineHelpText>Enter URL/Named Credential for the end-point URL</inlineHelpText>
    <label>Endpoint URL</label>
    <type>TextArea</type>
</CustomField>