force-app/main/default/objects/OLF_Callout_Setting__mdt/fields/Error_Codes_for_Retry__c.field-meta.xml
<CustomField>
    <fullName>Error_Codes_for_Retry__c</fullName>
    <inlineHelpText>Enter comma separated error codes which should be considered for retry.</inlineHelpText>
    <label>Error Codes for Retry</label>
    <type>TextArea</type>
</CustomField>