force-app/main/default/objects/OLF_Callout_Setting__mdt/fields/Max_Retry__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry__c</fullName>
    <label>Max Retry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>