force-app/main/default/objects/OLF_Callout_Setting__mdt/fields/Time_Interval_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Interval_In_Minutes__c</fullName>
    <label>Time Interval (In Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>